--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,6 +6,7 @@
 <body>
     <h2> Hello India ! Thank you for your generosity </h2>
     <p> Thank you for attending the session </p>
-    <h1> This is new India </h2>
+    <h2> This is new India </h2>
+    <h2> Jai Hind ! </h2>
 </body>
 </html>
